...
        android:textSize="50sp"
        android:textStyle="bold"
        android:text="Social Drinker"
        android:textColor="@color/colorIcons" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appNameTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:background="@color/colorIcons"
        android:hint="Enter Zip Code"
        android:inputType="number"
        android:padding="5dp" />

    <Button
        android:id="@+id/beerMeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@color/colorAccent"
...
